--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">MUSICPEDIA</h5>
                                 <p class="card-text">Simple web to make you know your favorite band history and achievements</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <a href="https://musicpedia.vercel.app/" class="btn btn-dark">Go somewhere</a>
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">MUSICPEDIA</h5>
                                 <p class="card-text">Simple web to make you know your favorite band history and achievements</p>
-                                <a href="#" class="btn btn-dark" data-bs-toggle="tooltip">Go somewhere</a>
+                                <a href="https://musicpedia.vercel.app/" class="btn btn-dark" data-bs-toggle="tooltip">Go somewhere</a>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">MUSICPEDIA</h5>
                                 <p class="card-text">Simple web to make you know your favorite band history and achievements</p>
-                                <a href="#" class="btn btn-dark">Go somewhere</a>
+                                <a href="https://musicpedia.vercel.app/" class="btn btn-dark">Go somewhere</a>
                             </div>
                         </div>
                     </div>
